--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,9 +25,9 @@
         <url-pattern>/Controller</url-pattern>
     </servlet-mapping>
 
-    <!--<listener>-->
-        <!--<listener-class>listeners.Listener</listener-class>-->
-    <!--</listener>-->
+    <listener>
+        <listener-class>listeners.Listener</listener-class>
+    </listener>
 
 
     <filter>
